docs: reconcile agent/tool/MCP with ROADMAP-12; add install coords; refresh versions
Agent / tool / MCP:
- Scrub the abandoned bespoke design (AgentDefinition.react(), app.orchestrate(),
  ReAct loop, cafeai-tools, cafeai-mcp) from SPEC.md, README, DEVELOPER_GUIDE,
  ADR-005, and ROADMAP/MILESTONE 07/11/12/16/17. Current direction: a thin
  binding over LangChain4j AiServices with an HTTP identity (ROADMAP-12).
- MILESTONE-12: realign phase tracker and decisions with ROADMAP-12.
- Older roadmap docs get "superseded by ROADMAP-12" banners rather than rewrites.

Install + versions:
- README / GETTING-STARTED / DEVELOPER_GUIDE: Maven Central coordinates
  (com.akilisha.oss, 0.1.3), Gradle + Maven blocks.
- Refresh stale versions: Java 23, Gradle 9.7.1, Helidon 4.4.0, LangChain4j 1.11.0;
  add Jlama to the provider list.
- GETTING-STARTED: drop the obsolete "Enable Preview Features" section, fix the
  committed-wrapper instructions and the broken example-route curl block.

README:
- (req, res) -> (req, res, next) in current samples; curl SSE example on /chat;
  Jlama.qwen2() provider line with the required --add-modules jdk.incubator.vector note.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015c1jrTRQ7at59DhhY2AGTP